--- a/detail-product.html
+++ b/detail-product.html
@@ -124,8 +124,7 @@
                             <div class="btn-group-product-filter mt-3 mb-3">
                                 <button class="btn btn-warning"><img src="img/cart-white.svg" alt="">В
                                     корзину</button>
-                                <button class="btn btn-default"><img src="img/complect-black.svg" alt="">Подобрать
-                                    державку</button>
+                                <button class="btn btn-default"><img src="img/complect-black.svg" alt=""><span class="select-derjavka">Подобрать державку</span></button>
                                 <a class="btn btn-default" href="#"><img src="img/heart-black.svg" alt=""></a>
                             </div>
                             <div class="info-product-detail mt-5 mb-5">
