--- a/detail-product.html
+++ b/detail-product.html
@@ -74,6 +74,17 @@
                             <button class="btn btn-mnogogrannik"><img src="img/cart.svg" alt=""></button>
                         </div>
                     </div>
+                    <div class="menu-600">
+                        <div class="logo">
+                            <a href="#">
+                                <img src="img/logo.svg" alt="">
+                            </a>
+                        </div>
+                        <div class="d-flex">
+                            <button class="btn btn-mnogogrannik" id="show-menu"><img src="img/menu-768.svg" alt=""></button>
+                            <button class="btn btn-mnogogrannik"><img src="img/cart.svg" alt=""></button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
